# pdf-mining

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  try.py  workflow_summary.md
.github/: deploy.yml  test.yml
configs/: __init__.py  batch_config.yaml  config.yaml  default.yaml  layout.yaml  ocr.yaml  stamp_detection.yaml
data/processed/: PVT-ZQUX6LMQ-CR-1 Signed.xlsx
pipeline/: batch_processor.py
results/: Ollyvian 1.xlsx  Ollyvian 2.xlsx
scripts/: annotate.py  setup.ps1  train_stamp_detector.py
src/: __init__.py  cli.py
src/configs/: None.yaml  layout.yaml
src/extraction/: __init__.py  layout_analysis.py  table_handling.py  text_extraction.py
src/name_unrelated.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/pdf_mining.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/pipeline/: __init__.py  batch_processor.py
src/postprocessing/: __init__.py  structure_data.py  text_cleaner.py
src/preprocessing/: image_enhancement.py  pdf_to_image.py
src/utils/: config_loader.py  ocr_config.py
tests/: test_pdf_processing.py
