[build-system]
requires = ["setuptools>=42", "wheel", "Cython"]
build-backend = "setuptools.build_meta"

[project]
name = "name-unrelated"
version = "0.1.0"
description = "Document processing and analysis pipeline"
dependencies = [
    # PDF Processing
    "PyPDF2>=3.0.0",
    "pdf2image>=1.16.0",
    "pdfplumber>=0.10.0",
    "PyYAML>=6.0",

    # Image Handling
    "opencv-python>=4.8.0",
    "Pillow>=10.0.0",

    # OCR
    "pytesseract>=0.3.10",
    "easyocr>=1.7.0",

    # Layout Analysis & Vision
    "layoutparser[layoutmodels]>=0.3.4",
    "torch>=2.0.0",
    "torchvision>=0.15.0",

    # Data Processing
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "xlsxwriter>=3.1.0",
    "numpy>=1.24.0"
]

[project.optional-dependencies]
dev = [
    "mypy>=1.5.0",
    "pytest>=7.4.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "flake8>=6.1.0"
]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
multi_line_output = 3