[build-system]
requires = ["setuptools>=42", "wheel", "Cython"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-mining"
version = "0.1.0"
description = "Document processing and analysis pipeline"
dependencies = [
    # PDF Processing
    "PyPDF2>=3.0.0",
    "pdf2image==1.16.3",
    "pdfplumber>=0.10.0",
    "PyYAML>=6.0",

    # Image Handling & Computer Vision
    "opencv-python==4.8.1",
    "Pillow==9.5.0",
    "scikit-image==0.19.3",

    # OCR
    "pytesseract==0.3.10",
    "easyocr>=1.7.0",

    # Machine Learning & Deep Learning
    "torch==1.13.1+cpu",
    "torchvision==0.14.1+cpu",
    "detectron2==0.6",
    "scikit-learn==1.2.2",

    # Data Processing & Analysis
    "pandas==2.0.3",
    "pnumpy",
    "numpy>=1.24.0",
    "openpyxl>=3.1.0",
    "xlsxwriter>=3.1.0",

    # Visualization
    "matplotlib==3.7.1",
    "seaborn==0.12.2",
    "plotly==5.15.0",
    "plotly_express==0.4.1",
    "plotly_resampler==0.10.1",

    # Utils
    "tqdm==4.65.0",

    # Web Framework
    "Flask",
    "Flask-Cors",
    "Flask-RESTful",
    "Flask-SocketIO",
    "Flask-Session",
    "Flask-Login",
    "Flask-Mail",

    # WebSocket
    "websocket-client",
    "websockets"
]

[project.optional-dependencies]
dev = [
    "mypy>=1.5.0",
    "pytest>=7.4.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "flake8>=6.1.0"
]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
multi_line_output = 3